[package]
name = "garmin_rust"
version = "0.14.27"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "garmin-rust"
priority = "optional"
section = "rust"
provides = "garmin-rust"
extended-description = """\
Process and display info about gps activity files."""

[dependencies]
anyhow = "1.0"
clap = {version="4.0", features=["derive"]}
env_logger = {version="0.11", features=["color", "humantime", "regex"], default-features = false}
fitbit_bot = {path="fitbit_bot"}
fitbit_lib = {path="fitbit_lib"}
garmin_cli = {path="garmin_cli"}
garmin_http = { path = "garmin_http" }
garmin_lib = { path = "garmin_lib" }
garmin_models = {path="garmin_models"}
garmin_utils = {path="garmin_utils"}
log = "0.4"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="0.9.3" }
tempfile = "3.12"
tokio = {version="1.40", features=["rt", "macros", "rt-multi-thread"]}

[workspace]
members = [
    "fitbit_lib",
    "garmin_cli",
    "garmin_lib",
    "garmin_http",
    "garmin_models",
    "garmin_parser",
    "garmin_utils",
    "strava_lib",
    "fitbit_bot",
    "race_result_analysis",
    "garmin_reports",
]

[[bin]]
name = "garmin-rust-http"
path = "src/garmin_rust_http.rs"
doc = false

[[bin]]
name = "scale-measurement-bot"
path = "src/scale_measurement_bot.rs"
doc = false

[[bin]]
name = "import-fitbit-json-files"
path = "src/import_fitbit_json_files.rs"
doc = false

[[bin]]
name = "garmin-rust-cli"
path = "src/garmin_rust_cli.rs"
doc = false

[[bin]]
name = "import-garmin-connect-data"
path = "src/import_garmin_connect_data.rs"
doc = false
