[package]
name = "fitbit_bot"
version = "0.11.21"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fitbit_lib = {path="../fitbit_lib"}
garmin_lib = {path="../garmin_lib"}
futures = "0.3"
tokio = {version="1.0", features=["full"]}
crossbeam-utils = "0.8"
lazy_static = "1.4"
parking_lot = "0.11"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.5"
arc-swap = "1.2"
telegram-bot = {git = "https://github.com/ddboline/telegram-bot.git", tag="0.7.3"}
stack-string = { version="0.2", features=["postgres_types", "rweb-openapi"] }

[dev-dependencies]
maplit = "1.0"
rand = "0.8"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", branch="master"}
