[package]
name = "fitbit_bot"
version = "0.16.6"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.2"
crossbeam-utils = "0.8"
fitbit_lib = {path="../fitbit_lib"}
garmin_lib = {path="../garmin_lib"}
garmin_utils = {path="../garmin_utils"}
futures = "0.3"
log = "0.4"
once_cell = "1.0"
parking_lot = "0.12"
stack-string = { version="1.1", features=["postgres_types"] }
telegram-bot = {git = "https://github.com/ddboline/telegram-bot.git", tag="0.9.0-4", default-features=false}
tokio = {version="1.47", features=["rt", "macros", "rt-multi-thread"]}

[dev-dependencies]
maplit = "1.0"
rand = "0.9"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
uuid = { version = "1.18", features = ["serde", "v4"] }
