[package]
name = "fitbit_lib"
version = "0.13.1"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
garmin_lib = {path = "../garmin_lib"}
garmin_connect_lib = {path = "../garmin_connect_lib"}
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="1.0", features=["system"]}
dotenv = "0.15"
glob = "0.3"
rayon = "1.5"
log = "0.4"
lazy_static = "1.4"
parking_lot = "0.12"
itertools = "0.10"
avro-rs = {version = "0.13", features = ["snappy"]}
uuid = { version = "1.0", features = ["serde", "v4"] }
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.4", features=["deadpool"]}
anyhow = "1.0"
thiserror = "1.0"
tokio = {version="1.21", features=["full"]}
futures = "0.3"
reqwest = {version="0.11", features=["cookies", "json", "rustls-tls", "stream"], default_features=false}
rand = "0.8"
base64 = "0.20"
maplit = "1.0"
bytes = "1.0"
statistical = "1.0"
fitparser = {git="https://github.com/ddboline/fitparse-rs.git", branch="time-0.3-0.5.1"}
smallvec = "1.6"
crossbeam-utils = "0.8"
stack-string = { version="0.8", features=["postgres_types"] }

[dev-dependencies]
tempfile = "3.1"
