[package]
name = "fitbit_lib"
version = "0.16.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = {version = "0.17", features = ["snappy"]}
base64 = "0.22"
bytes = "1.0"
crossbeam-utils = "0.8"
derive_more = {version="2.0", features=["full"]}
fitparser = {git="https://github.com/ddboline/fitparse-rs.git", branch="time-0.3-0.5.2"}
futures = "0.3"
garmin_lib = {path = "../garmin_lib"}
garmin_models = {path="../garmin_models"}
garmin_utils = {path="../garmin_utils"}
glob = "0.3"
itertools = "0.14"
log = "0.4"
maplit = "1.0"
once_cell = "1.0"
polars = {version="0.46", features=["temporal", "parquet", "lazy"]}
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
rand = "0.9"
rayon = "1.5"
reqwest = {version="0.12", features=["cookies", "json", "rustls-tls", "stream"], default-features=false}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
smallvec = "1.6"
stack-string = { version="1.1", features=["postgres_types"] }
statistical = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.44", features=["rt", "macros", "rt-multi-thread"]}
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.1"
