[package]
name = "garmin_cli"
version = "0.16.1"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = {version="1.5", features=["behavior-version-latest"]}
clap = {version="4.0", features=["derive"]}
derive_more = {version="2.0", features=["full"]}
fitbit_lib = {path="../fitbit_lib"}
futures = "0.3"
garmin_connect_lib = { path="../garmin_connect_lib" }
garmin_lib = {path="../garmin_lib"}
garmin_models={path="../garmin_models"}
garmin_parser={path="../garmin_parser"}
garmin_reports = {path="../garmin_reports"}
garmin_utils={path="../garmin_utils"}
itertools = "0.14"
log = "0.4"
notify = "8.0"
race_result_analysis = {path="../race_result_analysis"}
rayon = "1.5"
refinery = {version="0.8", features=["tokio-postgres"]}
regex = "1.4"
serde_json = "1.0"
smallvec = "1.6"
strava_lib = {path="../strava_lib"}
tempfile = "3.12"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.44", features=["rt", "macros", "rt-multi-thread"]}
tokio-postgres = {version = "0.7", features = ["with-time-0_3"]}
stack-string = { version="1.1", features=["postgres_types"] }
stdout-channel = "0.6"
