[package]
name = "garmin_connect_lib"
version = "0.15.8"
edition = "2021"

[dependencies]
anyhow = "1.0"
convert_case = "0.7"
garmin_lib = { path = "../garmin_lib" }
garmin_models = { path = "../garmin_models" }
garmin_utils = { path = "../garmin_utils" }
fitbit_lib = { path = "../fitbit_lib" }
log = "0.4"
maplit = "1.0"
oauth2 = "5.0"
reqwest = {version="0.12", features=["cookies", "json", "rustls-tls", "stream", "multipart"], default-features=false}
reqwest-oauth1 = "0.3"
select = "0.6"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="1.0.2" }
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.41", features=["rt", "macros", "rt-multi-thread"]}
tokio-stream = "0.1"
url = "2.5"
uuid = "1.0"