[package]
name = "garmin_connect_lib"
version = "0.16.8"
edition = "2021"

[dependencies]
convert_case = "0.10"
garmin_lib = { path = "../garmin_lib" }
garmin_models = { path = "../garmin_models" }
garmin_utils = { path = "../garmin_utils" }
fitbit_lib = { path = "../fitbit_lib" }
log = "0.4"
maplit = "1.0"
oauth2 = "5.0"
reqwest = {version="0.13", features=["cookies", "json", "stream", "multipart", "form"], default-features=false}
reqwest-oauth1 = {git = "https://github.com/ddboline/reqwest-oauth1.git"}
select = "0.6"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
stack-string = { version="1.1", features=["postgres_types"] }
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.48", features=["rt", "macros", "rt-multi-thread"]}
tokio-stream = "0.1"
url = "2.5"
uuid = "1.19"