[package]
name = "garmin_http"
version = "0.14.8"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.11.8"}
base64 = "0.21"
cookie = {version="0.18", features=["percent-encode"]}
derive_more = "0.99"
dioxus = "0.4"
dioxus-ssr = "0.4"
fitbit_lib = {path="../fitbit_lib/"}
futures = "0.3"
garmin_cli = {path = "../garmin_cli"}
garmin_lib = {path = "../garmin_lib"}
garmin_models = {path="../garmin_models"}
garmin_parser = {path="../garmin_parser"}
garmin_reports = {path="../garmin_reports"}
garmin_utils = {path="../garmin_utils"}
handlebars = "4.0"
itertools = "0.12"
lazy_static = "1.4"
log = "0.4"
maplit = "1.0"
parking_lot = "0.12"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.6", features=["deadpool"]}
race_result_analysis = {path="../race_result_analysis"}
reqwest = {version="0.11", features=["cookies", "json", "rustls-tls", "stream"], default_features=false}
rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], default-features=false, tag="0.15.1-1"}
rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.5.1" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="0.9.2" }
strava_lib = {path="../strava_lib/"}
tempdir = "0.3"
thiserror = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.35", features=["rt", "macros", "rt-multi-thread"]}
tokio-stream = "0.1"
url = "2.3"
uuid = "1.0"
