[package]
name = "garmin_http"
version = "0.15.11"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2021"

[dependencies]
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.12.3"}
base64 = "0.22"
cookie = {version="0.18", features=["percent-encode"]}
derive_more = {version="2.0", features=["full"]}
dioxus = "0.6"
dioxus-core = "0.6"
dioxus-ssr = "0.6"
fitbit_lib = {path="../fitbit_lib/"}
futures = "0.3"
garmin_cli = {path = "../garmin_cli"}
garmin_connect_lib = {path = "../garmin_connect_lib"}
garmin_lib = {path = "../garmin_lib"}
garmin_models = {path="../garmin_models"}
garmin_parser = {path="../garmin_parser"}
garmin_reports = {path="../garmin_reports"}
garmin_utils = {path="../garmin_utils"}
handlebars = "6.1"
itertools = "0.14"
log = "0.4"
maplit = "1.0"
notify = "8.0"
parking_lot = "0.12"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
race_result_analysis = {path="../race_result_analysis"}
reqwest = {version="0.12", features=["cookies", "json", "rustls-tls", "stream"], default-features=false}
rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], default-features=false, tag="0.15.2"}
rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.5.3" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yml = "0.0.12"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="1.0.2" }
strava_lib = {path="../strava_lib/"}
tempfile = "3.12"
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.43", features=["rt", "macros", "rt-multi-thread"]}
tokio-stream = "0.1"
url = "2.3"
uuid = "1.0"
