[package]
name = "garmin_lib"
version = "0.15.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
derive_more = {version="1.0", features=["full"]}
dirs = "5.0"
dotenvy = "0.15"
envy = "0.4"
once_cell = "1.0"
postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1", "derive"]}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
smallvec = "1.6"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="1.0.2" }
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-uuid-1"]}
uuid = { version = "1.0", features = ["serde", "v4"] }
url = "2.3"

[dev-dependencies]
approx = "0.5"
