[package]
name = "garmin_lib"
version = "0.16.3"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2021"

[dependencies]
apache-avro = {version = "0.17", features = ["snappy"]}
aws-smithy-runtime-api = "1.7"
aws-smithy-types = "1.3"
aws-sdk-s3 = "1.80"
base64 = "0.22"
bytes = "1.0"
deadpool = "0.12"
deadpool-postgres = "0.14"
derive_more = {version="2.0", features=["full"]}
dirs = "6.0"
dotenvy = "0.15"
envy = "0.4"
fitparser = {git="https://github.com/ddboline/fitparse-rs.git", branch="time-0.3-0.5.2"}
glob = "0.3"
http = "1.2"
json = "0.12"
log = "0.4"
notify = "8.0"
once_cell = "1.0"
polars = {version="0.46", features=["temporal", "parquet", "lazy"]}
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1", "derive"]}
rand = "0.9"
refinery = {version="0.8", features=["tokio-postgres"]}
reqwest = {version="0.12", features=["cookies", "json", "rustls-tls", "stream", "multipart"], default-features=false}
reqwest-oauth1 = "0.3"
roxmltree = "0.20"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
serde_yml = "0.0.12"
smallvec = "1.6"
stack-string = { version="1.1", features=["postgres_types"] }
stdout-channel = "0.6"
thiserror = "2.0"
telegram-bot = {git = "https://github.com/ddboline/telegram-bot.git", tag="0.9.0-4", default-features=false}
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.44", features=["rt", "macros", "rt-multi-thread"]}
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-uuid-1"]}
uuid = { version = "1.0", features = ["serde", "v4"] }
url = "2.3"
zip = {version = "2.1", default-features = false, features=["aes-crypto", "bzip2", "deflate", "deflate64", "lzma", "time", "zstd"]}

[dev-dependencies]
approx = "0.5"
