[package]
name = "garmin_models"
version = "0.16.3"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = {version = "0.17", features = ["snappy"]}
aws-config = {version="1.6", features=["behavior-version-latest"]}
aws-sdk-s3 = "1.80"
fitparser = {git="https://github.com/ddboline/fitparse-rs.git", branch="time-0.3-0.5.2"}
futures = "0.3"
garmin_lib = {path="../garmin_lib"}
garmin_utils = {path="../garmin_utils"}
itertools = "0.14"
json = "0.12"
log = "0.4"
once_cell = "1.0"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
rand = "0.9"
roxmltree = "0.20"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
stack-string = { version="1.1", features=["postgres_types"] }
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.44", features=["rt", "macros", "rt-multi-thread"]}
uuid = { version = "1.16", features = ["serde", "v4"] }
url = "2.3"

[dev-dependencies]
approx = "0.5"
