[package]
name = "garmin_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
avro-rs = {version = "0.13", features = ["snappy"]}
aws-config = {version="1.0", features=["behavior-version-latest"]}
aws-sdk-s3 = "1.1"
base64 = "0.21"
bytes = "1.0"
deadpool = "0.10"
deadpool-postgres = "0.11"
derive_more = "0.99"
dirs = "5.0"
dotenv = "0.15"
envy = "0.4"
fitparser = {git="https://github.com/ddboline/fitparse-rs.git", branch="time-0.3-0.5.2"}
flate2 = "1.0"
futures = "0.3"
garmin_lib = {path="../garmin_lib"}
garmin_models = {path="../garmin_models"}
garmin_utils = {path="../garmin_utils"}
itertools = "0.12"
json = "0.12"
lazy_static = "1.4"
log = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.5", features=["deadpool"]}
postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1", "derive"]}
rand = "0.8"
rayon = "1.5"
regex = "1.4"
roxmltree = "0.19"
rustls-native-certs = {version="0.6", default_features=false}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
smallvec = "1.6"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="0.9.2" }
subprocess = "0.2"
thiserror = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.34", features=["rt", "macros", "rt-multi-thread"]}
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-uuid-1"]}
uuid = { version = "1.0", features = ["serde", "v4"] }
url = "2.3"

[dev-dependencies]
approx = "0.5"
