[package]
name = "garmin_parser"
version = "0.16.2"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = {version="1.6", features=["behavior-version-latest"]}
aws-sdk-s3 = "1.80"
fitparser = {git="https://github.com/ddboline/fitparse-rs.git", branch="time-0.3-0.5.2"}
flate2 = "1.0"
garmin_lib = {path="../garmin_lib"}
garmin_models = {path="../garmin_models"}
garmin_utils = {path="../garmin_utils"}
log = "0.4"
postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1", "derive"]}
rayon = "1.5"
roxmltree = "0.20"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
smallvec = "1.6"
stack-string = { version="1.1", features=["postgres_types"] }
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}

[dev-dependencies]
approx = "0.5"
