[package]
name = "garmin_reports"
version = "0.13.21"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garmin_lib = {path="../garmin_lib"}
anyhow = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
log = "0.4"
rayon = "1.5"
lazy_static = "1.4"
regex = "1.4"
futures = "0.3"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.4", features=["deadpool"]}
url = "2.3"
itertools = "0.11"
derive_more = "0.99"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="0.9.1" }
uuid = { version = "1.0", features = ["serde", "v4"] }
