[package]
name = "garmin_reports"
version = "0.14.25"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derive_more = {version="1.0", features=["full"]}
futures = "0.3"
garmin_lib = {path="../garmin_lib"}
garmin_models = {path="../garmin_models"}
garmin_utils = {path="../garmin_utils"}
itertools = "0.13"
log = "0.4"
once_cell = "1.0"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
regex = "1.4"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="0.9.3" }
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
url = "2.3"
uuid = { version = "1.0", features = ["serde", "v4"] }
