[package]
name = "garmin_reports"
version = "0.16.8"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = {version="2.1", features=["full"]}
futures = "0.3"
garmin_lib = {path="../garmin_lib"}
garmin_models = {path="../garmin_models"}
garmin_utils = {path="../garmin_utils"}
itertools = "0.14"
log = "0.4"
once_cell = "1.21"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
regex = "1.12"
stack-string = { version="1.1", features=["postgres_types"] }
time = {version="0.3", features=["serde-human-readable", "macros", "formatting", "parsing"]}
time-tz = {version="2.0", features=["system"]}
url = "2.5"
uuid = { version = "1.19", features = ["serde", "v4"] }
